[gd_scene load_steps=7 format=3 uid="uid://dqlqsachnxomy"]

[ext_resource type="Script" path="res://main_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://user_details.tscn" id="2"]
[ext_resource type="PackedScene" path="res://start_menu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://apps/daily_prompts.tscn" id="4"]
[ext_resource type="Theme" uid="uid://cqlpsmjde8oae" path="res://wb_theme.tres" id="5"]
[ext_resource type="PackedScene" path="res://apps/pomodoro.tscn" id="6"]

[node name="main_screen" type="CanvasLayer"]
script = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="background_light" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.94902, 0.937255, 0.85098, 1)

[node name="top_bar" type="Panel" parent="UI"]
custom_minimum_size = Vector2(0, 40)
offset_right = 1280.0
offset_bottom = 40.0

[node name="top_container" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 42.0
offset_bottom = -48.0
theme = ExtResource("5")

[node name="start_menu" parent="UI/top_container" instance=ExtResource("3")]
visible = false

[node name="user_details" parent="UI/top_container" instance=ExtResource("2")]
visible = false

[node name="daily_prompts" parent="UI/top_container" instance=ExtResource("4")]
visible = false

[node name="pomodoro" parent="UI/top_container" instance=ExtResource("6")]
visible = false

[node name="bottom_bar" type="Panel" parent="UI"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
